
Changelog for 1.4.15
* Fix printing invoices and orders under Starman (GH 736) (ErikH)
* Fix payroll deduction types report failing to load (GH 740) (ChrisT)
* Fix absolute URLs interacting badly with reverse-proxy (GH 730) (ErikH)
* Fix printing of payments (GH 733) (JohnL)
* Fix deletion of reporting unit class (SF 1378) (ErikH)
* Fix warnings in webserver logs on contact screen/search (ErikH)

ErikH is Erik Huelsmann
ChrisT is Chris Travers
JohnL is John Locke

Changelog for 1.4.14
* Replace spanish CoA for compliance; donated by AccountNet
* Correctly set HTML form element 'required' attribute in output (ErikH)
* In Employee entry screen, mark required fields as such (ErikH)
* Fix being unable to remove roles from user (SF 1395) (ErikH)
* Improved required input checking on form submit (SF 1382/GH 715) (ErikH)
* Fixed css making it difficult or impossible to save person records (Chris T)
* Fixed sudden bouncing to employee screen along with info loss (Chris T)
* Fixed salutation and entity class not setting, entering person (Chris T)
* Prevent CREATE LANGUAGE error when creating new company (RobR)
* Fixed errors not showing up properly using Starman (Chris T)

Chris T is Chris Travers
ErikH is Erik Huelsmann
RobR is Rob Ransbottom


Changelog for 1.4.13
* Account edit group can checkboxes and mark accounts obsolete (Chris T)
* Fixed time cards failing to save (GitHub bug 636) (Erik H)
* List COGS accounts under 'Default COGS' (instead of expense) (Erik H)
* Fix preprocessing Roles.sql was required in 1.3 (obsolete in 1.4) (Erik H)
* Fix entry, selection and listing of GIFI account codes (Erik H)
* Fix entity "Accounts" 'Save as' button (Erik H)
* Fix 'Business Type' not showing up in Contact Account tab (Erik H)
* Fix balance sheet CSV missing 'description' column content (Erik H)
* Fix can't delete draft transactions with reporting units (SF 1391) (Erik H)
* GIFI PNL reports are back.  (Chris T)
* Fix payment entry at the bottom of invoices (SF 1394) (Erik H)